refactor(styles): update layout and remove unused files
- Add width, height and overflow properties to html/body elements
- Remove aboutme.html and related styles/scripts
- Update index.html content and styling
- Delete unused package.json and package-lock.json
- Implement typewriter effect in index1.js
- Simplify styles1.css by removing unused components

--- a/index.html
+++ b/index.html
@@ -21,10 +21,16 @@
     <script defer src="/sources/index1.js"></script>
 </head>
 <body>
+
+    <div id="mobile-menu">
+        <div class="mobile-menu-items">
+            <a href="/index.html">Home</a>
+            <a href="/contact.html">Contato</a>
+        </div>
+    </div>
     <div id="navbar">
         <div id="menu">
             <a href="/index.html">Home</a>
-            <a href="/aboutme.html">Sobre</a>
             <a href="/contact.html">Contato</a>
         </div>
         <div id="logo">
@@ -38,11 +44,11 @@
 
     <div class="content-area-wrapper">
         <div class="text-card">
-           <p class="inspired-by">Inspirado com</p>
-           <h1 class="material-design">Material Design</h1>
-           <p class="description">O Material Design 3 é o sistema de design de código aberto do Google para criar produtos bonitos e utilizáveis.</p>
-           <md-filled-button class="learn-more" onclick="window.location.href='https://m3.material.io/get-started'">Saiba mais</md-filled-button>
-           <md-filled-button class="about-me" onclick="window.location.href='/aboutme.html'">Sobre Mim</md-filled-button>
+           <p class="inspired-by">Desenvolvedor de Software</p>
+           <h1 class="material-design">Guilherme Araújo de Morais|</h1>
+           <p class="description">Amante do ecossistema .NET, sou desenvolvedor Full-Stack, familiarizado com <span class="tech-color">Java</span>, <span class="tech-color">Python</span> e <span class="tech-color">CSharp</span>. Atualmente aprendendo <span class="tech-color">React Native</span></p>
+           <md-filled-tonal-button onclick="window.location.href='./contact.html'"> Entre em contato </md-filled-tonal-button>
+
         </div>
         <div class="video-card">
            <video autoplay muted loop >
@@ -90,7 +96,5 @@
     </div>
     
 
-    <br>
-    <br>
 </body>
 </html>
