feat: add profile image and improve page layout
- Add profile image to homepage with styling
- Simplify navbar by removing redundant links
- Adjust content area margins and alignment
- Remove unnecessary comments from CSS and JS files
- Update page title to be more concise

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guilherme Araújo - Teste Navbar</title>
+    <title>Guilherme Araújo</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <script type="importmap">
         {
@@ -30,7 +30,6 @@
     </div>
     <div id="navbar">
         <div id="menu">
-            <a href="/index.html">Home</a>
             <a href="/contact.html">Contato</a>
         </div>
         <div id="logo">
@@ -42,13 +41,24 @@
         </div>
     </div>
 
+    
     <div class="content-area-wrapper">
         <div class="text-card">
-           <p class="inspired-by">Desenvolvedor de Software</p>
-           <h1 class="material-design">Guilherme Araújo de Morais|</h1>
-           <p class="description">Amante do ecossistema .NET, sou desenvolvedor Full-Stack, familiarizado com <span class="tech-color">Java</span>, <span class="tech-color">Python</span> e <span class="tech-color">CSharp</span>. Atualmente aprendendo <span class="tech-color">React Native</span></p>
-           <md-filled-tonal-button onclick="window.location.href='./contact.html'"> Entre em contato </md-filled-tonal-button>
+            <p class="inspired-by">Desenvolvedor de Software</p>
+            <h1 class="material-design">Guilherme Araújo de Morais|</h1>
+            <p class="description">Amante do ecossistema .NET, sou desenvolvedor Full-Stack, familiarizado com <span class="tech-color">Java</span>, <span class="tech-color">Python</span> e <span class="tech-color">CSharp</span>. Atualmente aprendendo <span class="tech-color">React Native</span></p>
+            <md-filled-tonal-button onclick="window.location.href='./contact.html'"> Entre em contato </md-filled-tonal-button>
+        </div>
+        <div class="text-card">
+           <img src="./sources/img/me.jpg">
+        </div>
+    </div>
 
+    <div class="content-area-wrapper">
+        <div class="text-card">
+           <p class="inspired-by">Design by</p>
+           <h2 class="material-design">Material Design</h2>
+           <p class="description"> O Material Design 3 é o sistema de design de código aberto do Google para criar produtos bonitos e utilizáveis</p>
         </div>
         <div class="video-card">
            <video autoplay muted loop >
@@ -57,6 +67,7 @@
            </video>
         </div>
     </div>
+
     <div class="content-area-wrapper2">
         <div class="video-card">
           <video autoplay muted loop>
